# tts-small-vlm

./: .env.example  .gitignore  LICENSE  README.md  notebook.ipynb  pyproject.toml  requirements.txt
configs/baselines/: q25_cot.yaml  q25_sc_n8.yaml  q25_zero_shot.yaml  q35_cot.yaml  q35_zero_shot.yaml
configs/scaling/: q35_sc_n16_2k.yaml  q35_sc_n8_1k.yaml  q35_sc_n8_2k.yaml  q35_sc_n8_2k_t03.yaml  q35_sc_n8_2k_t05.yaml  q35_sc_n8_2k_t09.yaml
configs/search/: q25_dtr_n2m2.yaml  q25_dtr_n4m4.yaml  q25_dtr_n4m4_prm.yaml  q25_prm_bas_dev.yaml  q25_sc_n8_dev.yaml  q35_prm_bas_val.yaml
configs/test/: q35_sc_n16_2k_test.yaml
eval/: evaluate.py
paper/figures/: plot_figures.py
scripts/: analyze.py  analyze_parse_fail.py  experiment.py  format_submission.py  repair_parse_failures.py  rescore_dtr_with_prm.py  score_with_critic.py  score_with_prm.py  serve_vllm.sh
slurm/: baselines_q25.sbatch  baselines_q35.sbatch  dtr_prm_rescore_dev.sbatch  prm_bas_q35_val.sbatch  scaling_q35.sbatch  search_q25_dev.sbatch  selectors_q25.sbatch  selectors_q35.sbatch  temp_sweep_q35.sbatch  test_submission.sbatch
src/: backend.py  backend_vllm.py  describe.py  pipeline.py  reason.py  search.py  verify.py
src/utils/: __init__.py  core.py  logger.py  records.py  subsets.py  tracing.py  wandb_logger.py
tests/: test_analyze.py  test_describe.py  test_integration_smoke.py  test_logger.py  test_pipeline.py  test_reason.py  test_search.py  test_subsets.py  test_utils.py  test_verify.py  test_verify_dtr_prm.py
tests/test_fixtures/: candidate_record.schema.json
