[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tts-small-vlm"
version = "0.1.0"
description = "Test-Time Scaling for Small VLMs on Multilingual Exam QA"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Spiros Baxevanakis" },
    { name = "Lester Yang" },
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
